# Autoscope-Stellarium-plugin

./: 0001-Enable-autoscope-plugin.patch  CMakeLists.txt  Doxyfile  README.md
doc/html/: _autoscope_8cpp.html  _autoscope_8cpp__incl.map  _autoscope_8cpp__incl.md5  _autoscope_8cpp_source.html  _autoscope_8hpp.html  _autoscope_8hpp__dep__incl.map  _autoscope_8hpp__dep__incl.md5  _autoscope_8hpp__incl.map  _autoscope_8hpp__incl.md5  _autoscope_8hpp_source.html  _autoscope_picture_window_form_8cpp.html  _autoscope_picture_window_form_8cpp__incl.map  _autoscope_picture_window_form_8cpp__incl.md5  _autoscope_picture_window_form_8cpp_source.html  _autoscope_picture_window_form_8hpp.html  _autoscope_picture_window_form_8hpp__dep__incl.map  _autoscope_picture_window_form_8hpp__dep__incl.md5  _autoscope_picture_window_form_8hpp__incl.map  _autoscope_picture_window_form_8hpp__incl.md5  _autoscope_picture_window_form_8hpp_source.html  _autoscope_window_form_8cpp.html  _autoscope_window_form_8cpp__incl.map  _autoscope_window_form_8cpp__incl.md5  _autoscope_window_form_8cpp_source.html  _autoscope_window_form_8hpp.html  _autoscope_window_form_8hpp__dep__incl.map  _autoscope_window_form_8hpp__dep__incl.md5  _autoscope_window_form_8hpp__incl.map  _autoscope_window_form_8hpp__incl.md5  _autoscope_window_form_8hpp_source.html  _command_parser_8cpp.html  _command_parser_8cpp__incl.map  _command_parser_8cpp__incl.md5  _command_parser_8hpp.html  _command_parser_8hpp__dep__incl.map  _command_parser_8hpp__dep__incl.md5  _command_parser_8hpp__incl.map  _command_parser_8hpp__incl.md5  _command_parser_8hpp_source.html  annotated.html  (+115 more)
doc/latex/: _autoscope_8cpp.tex  _autoscope_8cpp__incl.md5  _autoscope_8hpp.tex  _autoscope_8hpp__dep__incl.md5  _autoscope_8hpp__incl.md5  _autoscope_picture_window_form_8cpp.tex  _autoscope_picture_window_form_8cpp__incl.md5  _autoscope_picture_window_form_8hpp.tex  _autoscope_picture_window_form_8hpp__incl.md5  (+65 more)
lib/: libQt5Ftp.la  libQt5Ftp.prl
resources/: Autoscope.qrc
src/: Autoscope.cpp  Autoscope.hpp  CMakeLists.txt
src/gui/: AutoscopeFtpDialog.cpp  AutoscopeFtpDialog.hpp  AutoscopeFtpDialog.ui  AutoscopePictureWindowForm.cpp  AutoscopePictureWindowForm.hpp  AutoscopePictureWindowForm.ui  AutoscopeWindow.cpp  AutoscopeWindow.hpp  AutoscopeWindow.ui  AutoscopeWindowForm.cpp  AutoscopeWindowForm.hpp  AutoscopeWindowForm.ui
src/network/: CommandParser.cpp  CommandParser.hpp  tcp_client.cpp  tcp_client.hpp  tcp_server.cpp  tcp_server.hpp
(+152 files in other folders)
